force-app/main/default/objects/LeadAccountMapping__c/fields/AccountAPIName__c.field-meta.xml
<CustomField>
    <fullName>AccountAPIName__c</fullName>
    <description>Account field API name</description>
    <label>Account API Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>