force-app/main/default/objects/LeadAccountMapping__c/fields/AccountFieldName__c.field-meta.xml
<CustomField>
    <fullName>AccountFieldName__c</fullName>
    <description>Account field label</description>
    <label>Account Field Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>