force-app/main/default/objects/LeadAccountMapping__c/fields/LeadAPIName__c.field-meta.xml
<CustomField>
    <fullName>LeadAPIName__c</fullName>
    <description>Lead field API name</description>
    <label>Lead API Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>